fix(Config): Remove dummy API key.

--- a/src/Beatrice.Web/appsettings.Beatrice.sample.json
+++ b/src/Beatrice.Web/appsettings.Beatrice.sample.json
@@ -3,7 +3,7 @@
     "Security": {
       "User": "<UserName>",
       "Password": "<SHA256 hash of 'UserName:Password'>",
-      "SyncRequestApiKey": "AIzaSyAC1SLMNEoP-WurOAoDjdWeiTDRxdQNgTI",
+      "SyncRequestApiKey": "<Your API Key>",
       "OAuth": {
         "AllowInsecureHttp": true,
         "ClientId": "<Your Client Key>",
